add text info and add link-img style

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <ul class="navbar">
       <li><a>首页</a></li>
       <li><a>专题</a></li>
-      <li><a>新闻 NEWS</a></li>
-      <li><a>公告NOTICE</a></li>
+      <li><a>新闻</a></li>
+      <li><a>公告</a></li>
       <li><a>川大团委</a></li>
       <li><a>学生园地</a></li>
       <li><a>绿色通道</a></li>
@@ -28,11 +28,12 @@
     <div class="banner-img"></div>
   </section>
   <section class="special clearfix">
-    <h2 class="f8 c-grey-2 tc">专题<span class="c-grey-4 fl ml1 f-rw">SPECIAL</span></h2>
-    <p class="c-grey-4 tc">专题的简单描述精简高大上一点点</p>
+    <h2 class="title f8 c-grey-2 tc">专题<span class="c-grey-4 fl ml1 f-rw">SPECIAL</span></h2>
+    <p class="title-desc">点面结合 板块互联 扬帆新航</p>
+    <div class="divider"></div>
     <div class="container">
       <div class="row">
-        <div class="links mauto clearfix"><a class="link-square lighter"><i class="fa fa-trophy fa-2x link-square_icon"></i>
+        <div class="links tc clearfix"><a class="link-square lighter"><i class="fa fa-trophy fa-2x link-square_icon"></i>
             <h4 class="link-square_desc">挑战杯</h4></a><a class="link-square light"><i class="fa fa-laptop fa-2x link-square_icon"></i>
             <h4 class="link-square_desc">大创</h4></a><a class="link-square"><i class="fa fa-globe fa-2x link-square_icon"></i>
             <h4 class="link-square_desc">社会实践</h4></a><a class="link-square dark"><i class="fa fa-heart fa-2x link-square_icon"></i>
@@ -42,80 +43,84 @@
     </div>
   </section>
   <section class="news clearfix bg-grey-1">
-    <h2 class="f8 c-grey-2 tc">新闻<span class="c-grey-4 fl ml1 f-rw">NEWS</span></h2>
+    <h2 class="title f8 c-grey-2 tc">新闻<span class="c-grey-4 fl ml1 f-rw">NEWS</span></h2>
+    <p class="title-desc">最热资讯汇聚最燃青春正能量</p>
+    <div class="divider"></div>
     <div class="container">
       <div id="news-list-wrap" class="news-list-wrap pr">
         <div id="news-list" style="left:0" class="news-list">
           <div class="news-wrap"><a class="link-img">
               <div class="link-img_img-wrap">
-                <div style="background-image:url('images/test-1.jpg');" class="link-img_img"></div>
+                <div style="background-image:url('images/index-bg-1.jpg');" class="link-img_img"></div>
               </div>
               <div class="link-img_text">
-                <h3 class="link-img_title">000000</h3>
-                <p class="link-img_desc">新闻描述描述描述描述描述描述描述描述描述描述</p>
+                <h3 class="link-img_title">校团委成功举办“两学一做”专题学习会</h3>
+                <p class="link-img_desc">11月2日，校团委在行政楼105举办“两学一做”专题学习会。校团委全体成员参加。</p>
               </div></a></div>
           <div class="news-wrap"><a class="link-img">
               <div class="link-img_img-wrap">
-                <div style="background-image:url('images/test-1.jpg');" class="link-img_img"></div>
+                <div style="background-image:url('images/index-bg-2.jpg');" class="link-img_img"></div>
               </div>
               <div class="link-img_text">
-                <h3 class="link-img_title">1111111</h3>
-                <p class="link-img_desc">新闻描述描述描述描述描述描述描述描述描述描述</p>
+                <h3 class="link-img_title">“秋之韵”德国慕尼黑工业大学交响乐团音乐会悦动江安</h3>
+                <p class="link-img_desc">11月4日晚，“秋之韵”德国慕尼黑工业大学交响乐团音乐会登陆江安校区，给川大师生带来一场听觉的盛宴。</p>
               </div></a></div>
           <div class="news-wrap"><a class="link-img">
               <div class="link-img_img-wrap">
-                <div style="background-image:url('images/test-1.jpg');" class="link-img_img"></div>
+                <div style="background-image:url('images/index-bg-3.jpg');" class="link-img_img"></div>
               </div>
               <div class="link-img_text">
-                <h3 class="link-img_title">2222222</h3>
-                <p class="link-img_desc">新闻描述描述描述描述描述描述描述描述描述描述</p>
+                <h3 class="link-img_title">挑战杯国赛终审决赛赛前培训会成功举办</h3>
+                <p class="link-img_desc">11月4日，校科协成功举办挑战杯国赛终审决赛赛前培训会。我校进入国赛决赛的4支团队参与培训会。</p>
               </div></a></div>
           <div class="news-wrap"><a class="link-img">
               <div class="link-img_img-wrap">
-                <div style="background-image:url('images/test-1.jpg');" class="link-img_img"></div>
+                <div style="background-image:url('images/index-bg-4.jpg');" class="link-img_img"></div>
               </div>
               <div class="link-img_text">
-                <h3 class="link-img_title">33333333</h3>
-                <p class="link-img_desc">新闻描述描述描述描述描述描述描述描述描述描述</p>
+                <h3 class="link-img_title">四川大学120周年校庆志愿者总结表彰大会成功举行</h3>
+                <p class="link-img_desc">11月3日，四川大学120周年校庆志愿者总结表彰大会在文华活动中心音乐厅成功举行。校党委副书记李向成、校长助理、学工部部长郭勇参加大会。大会由校团委书记徐海鑫主持。</p>
               </div></a></div>
           <div class="news-wrap"><a class="link-img">
               <div class="link-img_img-wrap">
-                <div style="background-image:url('images/test-1.jpg');" class="link-img_img"></div>
+                <div style="background-image:url('images/index-bg-5.jpg');" class="link-img_img"></div>
               </div>
               <div class="link-img_text">
-                <h3 class="link-img_title">44444444</h3>
-                <p class="link-img_desc">新闻描述描述描述描述描述描述描述描述描述描述</p>
+                <h3 class="link-img_title">校团委成功举办“两学一做”专题学习会</h3>
+                <p class="link-img_desc">11月2日，校团委在行政楼105举办“两学一做”专题学习会。校团委全体成员参加。</p>
               </div></a></div>
           <div class="news-wrap"><a class="link-img">
               <div class="link-img_img-wrap">
-                <div style="background-image:url('images/test-1.jpg');" class="link-img_img"></div>
+                <div style="background-image:url('images/index-bg-6.jpg');" class="link-img_img"></div>
               </div>
               <div class="link-img_text">
-                <h3 class="link-img_title">55555555</h3>
-                <p class="link-img_desc">新闻描述描述描述描述描述描述描述描述描述描述</p>
+                <h3 class="link-img_title">“秋之韵”德国慕尼黑工业大学交响乐团音乐会悦动江安</h3>
+                <p class="link-img_desc">11月4日晚，“秋之韵”德国慕尼黑工业大学交响乐团音乐会登陆江安校区，给川大师生带来一场听觉的盛宴。</p>
               </div></a></div>
           <div class="news-wrap"><a class="link-img">
               <div class="link-img_img-wrap">
-                <div style="background-image:url('images/test-1.jpg');" class="link-img_img"></div>
+                <div style="background-image:url('images/index-bg-7.jpg');" class="link-img_img"></div>
               </div>
               <div class="link-img_text">
-                <h3 class="link-img_title">66666666666</h3>
-                <p class="link-img_desc">新闻描述描述描述描述描述描述描述描述描述描述</p>
+                <h3 class="link-img_title">挑战杯国赛终审决赛赛前培训会成功举办</h3>
+                <p class="link-img_desc">11月4日，校科协成功举办挑战杯国赛终审决赛赛前培训会。我校进入国赛决赛的4支团队参与培训会。</p>
               </div></a></div>
           <div class="news-wrap"><a class="link-img">
               <div class="link-img_img-wrap">
-                <div style="background-image:url('images/test-1.jpg');" class="link-img_img"></div>
+                <div style="background-image:url('images/index-bg-8.jpg');" class="link-img_img"></div>
               </div>
               <div class="link-img_text">
-                <h3 class="link-img_title">77777777</h3>
-                <p class="link-img_desc">新闻描述描述描述描述描述描述描述描述描述描述</p>
+                <h3 class="link-img_title">四川大学120周年校庆志愿者总结表彰大会成功举行</h3>
+                <p class="link-img_desc">11月3日，四川大学120周年校庆志愿者总结表彰大会在文华活动中心音乐厅成功举行。校党委副书记李向成、校长助理、学工部部长郭勇参加大会。大会由校团委书记徐海鑫主持。</p>
               </div></a></div>
         </div>
       </div>
     </div>
   </section>
   <section class="notice clearfix">
-    <h2 class="f8 c-grey-2 tc">公告<span class="c-grey-4 fl ml1 f-rw">NOTICE</span></h2>
+    <h2 class="title f8 c-grey-2 tc">公告<span class="c-grey-4 fl ml1 f-rw">NOTICE</span></h2>
+    <p class="title-desc">引领青年发展 助力青年成长</p>
+    <div class="divider"></div>
     <div class="container">
       <div class="row">
         <div class="l-5 m-5 s-6 x-8 l-offset-1 m-offset-1 s-offset-0 x-offset-2">
@@ -128,10 +133,10 @@
         </div>
         <div class="l-5 m-5 s-6 x-8 l-offset-0 m-offset-0 s-offset-0 x-offset-2">
           <ul class="notice-list">
-            <li><a>关于补招四川大学团委宣传部川大人报社学生干部的通知</a></li>
-            <li><a>关于组织学生参加第十届成都青年创业大赛的通知</a></li>
-            <li><a>关于补招四川大学团委宣传部川大人报社学生干部的通知</a></li>
-            <li><a>关于组织学生参加第十届成都青年创业大赛的通知</a></li>
+            <li><a>关于组织开展2016年度四川大学青年研究课题的通知</a></li>
+            <li><a>关于招募2016年四川大学迎新晚会暨十佳学生会表彰大会导演组成员的通知</a></li>
+            <li><a>关于深入学习贯彻党的是八届六中全会精神的通知</a></li>
+            <li><a>关于组织开展“挑战杯”四川大学2016年学生科技节之第三届“墨香古韵”国学知识竞赛的通知</a></li>
           </ul>
         </div>
       </div>
@@ -141,6 +146,7 @@
   <div class="youth-league-bg"></div>
   <section class="youth-league pt5 clearfix">
     <h2 class="title f8 tc">川大团委<span class="op5 fl ml1 f-rw">ABOUT US</span></h2>
+    <p class="title-desc">触手可及的川大共青团</p>
     <button id="yl-left" class="arrow left"></button>
     <button id="yl-right" class="arrow right"></button>
     <div id="intro-list" style="left:0;" class="intro-list">
@@ -149,9 +155,9 @@
           <div class="row">
             <section class="l-8 m-10 s-12 x-12 l-offset-2 m-offset-1 s-offset-0 x-offset-0">
               <h3 class="f5 tc group-name">团委秘书处</h3>
-              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
-              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
-              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
+              <p class="tc group-intro">团委秘书处是校团委重要职能部门，负责校团委日常工作的开展，主要负责校团委办公室事务、</p>
+              <p class="tc group-intro">相关会议组织和财务工作等，是校团委的“大管家”。下设综合事务中心、信息管理中心、</p>
+              <p class="tc group-intro">交流活动中心和青年服务与发展中心。</p>
             </section>
           </div>
         </div>
@@ -161,9 +167,10 @@
           <div class="row">
             <section class="l-8 m-10 s-12 x-12 l-offset-2 m-offset-1 s-offset-0 x-offset-0">
               <h3 class="f5 tc group-name">学生会</h3>
-              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
-              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
-              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
+              <p class="tc group-intro">四川大学学生会是川大本科学生自治组织，是成都市学生联合会主席单位。四川大学学生会致力于通过</p>
+              <p class="tc group-intro">各类型活动，全面服务川大同学，助力同学成长进步。下设办公室、宣传部、学术科技部、</p>
+              <p class="tc group-intro">文体部、外联部、学习部、权益部、素质拓展中心、公关礼仪部和女生部等</p>
+              <p class="tc group-intro">二级部门，同时分管四川大学学生电视台等的工作。</p>
             </section>
           </div>
         </div>
@@ -173,9 +180,9 @@
           <div class="row">
             <section class="l-8 m-10 s-12 x-12 l-offset-2 m-offset-1 s-offset-0 x-offset-0">
               <h3 class="f5 tc group-name">团委组织部</h3>
-              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
-              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
-              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
+              <p class="tc group-intro">团委组织部是校团委重要职能部门，负责全校基层团建和团干培养工作。下设综合中心、</p>
+              <p class="tc group-intro">骨干培养中心、组织建设中心、基层工作中心、宣传中心</p>
+              <p class="tc group-intro">和“青马工程”专项办公室六大部门。</p>
             </section>
           </div>
         </div>
@@ -185,9 +192,9 @@
           <div class="row">
             <section class="l-8 m-10 s-12 x-12 l-offset-2 m-offset-1 s-offset-0 x-offset-0">
               <h3 class="f5 tc group-name">团委宣传部</h3>
-              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
-              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
-              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
+              <p class="tc group-intro">团委宣传部是校团委重要职能部门，肩负着引领学生思潮，助力学生成长的重任，负责全校团学系统</p>
+              <p class="tc group-intro">的宣传和全校青年的舆论引导工作。下设办公室、新媒体中心、网络部、创意设计部、企划部、</p>
+              <p class="tc group-intro">《川大人》报社、《川大共青团》杂志社和校园广播站等二级部门。</p>
             </section>
           </div>
         </div>
@@ -197,9 +204,9 @@
           <div class="row">
             <section class="l-8 m-10 s-12 x-12 l-offset-2 m-offset-1 s-offset-0 x-offset-0">
               <h3 class="f5 tc group-name">团委文化艺术部</h3>
-              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
-              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
-              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
+              <p class="tc group-intro">团委文化艺术部是校团委重要职能部门，负责组织开展校园内大型学生文化艺术活动，</p>
+              <p class="tc group-intro">如凤舞川大、凤鸣川大等在全校内影响力大、知名度高的品牌活动，</p>
+              <p class="tc group-intro">是校园文化艺术活动主阵地。</p>
             </section>
           </div>
         </div>
@@ -209,9 +216,7 @@
           <div class="row">
             <section class="l-8 m-10 s-12 x-12 l-offset-2 m-offset-1 s-offset-0 x-offset-0">
               <h3 class="f5 tc group-name">团委创业就业促进部</h3>
-              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
-              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
-              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
+              <p class="tc group-intro">团委创业就业促进部是校团委重要职能部门，旨在提升学生创新创业能力和促进学生就业。</p>
             </section>
           </div>
         </div>
@@ -221,9 +226,8 @@
           <div class="row">
             <section class="l-8 m-10 s-12 x-12 l-offset-2 m-offset-1 s-offset-0 x-offset-0">
               <h3 class="f5 tc group-name">科协</h3>
-              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
-              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
-              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
+              <p class="tc group-intro">四川大学学生学术科技协会是川大全校性质的学生学术科技联合组织，负责组织开展校内大型学术</p>
+              <p class="tc group-intro">科技竞赛和配合组织省级、国家级和国际级大赛在四川大学的开展工作。</p>
             </section>
           </div>
         </div>
@@ -233,9 +237,8 @@
           <div class="row">
             <section class="l-8 m-10 s-12 x-12 l-offset-2 m-offset-1 s-offset-0 x-offset-0">
               <h3 class="f5 tc group-name">青志</h3>
-              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
-              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
-              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
+              <p class="tc group-intro">四川大学青年志愿者协会前为四川大学青年志愿者总队，始创于上世纪90年代，秉承志愿服务精神，</p>
+              <p class="tc group-intro">开展各类型、各层次青年志愿服务，展现川大学子的社会责任感和奉献心。</p>
             </section>
           </div>
         </div>
@@ -245,9 +248,8 @@
           <div class="row">
             <section class="l-8 m-10 s-12 x-12 l-offset-2 m-offset-1 s-offset-0 x-offset-0">
               <h3 class="f5 tc group-name">社团联</h3>
-              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
-              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
-              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
+              <p class="tc group-intro">四川大学学生社团联合会，简称校社团联，是全校600余学生社团的综合管理和服务组织，负责对</p>
+              <p class="tc group-intro">包括学术性、文体型、实践型等在内的八大类学生社团进行监督、考核和服务。</p>
             </section>
           </div>
         </div>
@@ -257,9 +259,7 @@
           <div class="row">
             <section class="l-8 m-10 s-12 x-12 l-offset-2 m-offset-1 s-offset-0 x-offset-0">
               <h3 class="f5 tc group-name">川大青年研究中心</h3>
-              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
-              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
-              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
+              <p class="tc group-intro">川大共青团青年研究中心是全校性的青年研究中心，引导学生思潮，探究学生思想。</p>
             </section>
           </div>
         </div>
@@ -267,7 +267,9 @@
     </div>
   </section>
   <section class="student-ground">
-    <h2 class="f8 c-grey-2 tc">学生园地<span class="c-grey-4 fl ml1 f-rw">STUDENT</span></h2>
+    <h2 class="title f8 c-grey-2 tc">学生园地<span class="c-grey-4 fl ml1 f-rw">STUDENT</span></h2>
+    <p class="title-desc">感知最在地青春川大</p>
+    <div class="divider"></div>
     <div class="container">
       <div class="row">
         <div class="l-6 m-6 s-6 x-10 l-offset-1 m-offset-1 s-offset-0 x-offset-1">
