--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 <body>
   <div class="header-bg"></div><a id="return-top" href="#header" class="return-top"></a>
   <header id="header" class="header">
-    <!--img.bg-img(src='images/index-bg-4.jpg')-->
     <div class="bg-layer"></div>
     <form class="searchbar">
       <input type="text" placeholder="keyword" class="searchbar_input">
@@ -19,15 +18,11 @@
     <div class="header-text">
       <p class="welcome">WELCOME TO</p>
       <h1 class="title">青春川大</h1>
-      <div class="desc">
+      <div class="desc mt1">
         <p><span>感受青春律动</span><span class="ml2">释放青春活力</span></p>
         <p>—— 触手可及的川大共青团</p>
       </div>
     </div>
-    <!--img.logo-->
-    <!--form.searchbar-->
-    <!--  input.searchbar_input(type="text" placeholder="关键词")-->
-    <!--  input.searchbar_btn(type="submit" value="搜索")-->
     <nav class="nav clearfix c-w tc">
       <ul id="navbar" class="navbar mauto">
         <li><a href="#special" class="link-spec">专题</a></li>
@@ -341,6 +336,7 @@
         </section>
         <section class="x-12 s-12 m-3 l-3 qr-code">
           <h3>二维码</h3><img src="images/qr-code.png" class="img-qrcode">
+          <p class="qrcode-desc">川大共青团</p>
         </section>
       </div>
     </div>
