fix layout bugs in IE8

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <link rel="stylesheet" type="text/css" href="css/base.css">
   <link rel="stylesheet" type="text/css" href="css/theme.css">
   <link rel="stylesheet" type="text/css" href="css/index.css">
-  <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
+  <link rel="stylesheet" type="text/css" href="css/font-awesome.css"><!--[if lt IE 9]>
+  <script src="js/html5shiv.min.js"></script>
+  <script src="js/respond.min.js"></script><![endif]-->
 </head>
 <body>
   <div class="header-bg"></div><a id="return-top" href="#header" class="return-top"></a>
@@ -310,6 +312,7 @@
     </div>
   </section>
   <footer id="green-channel" class="footer clearfix c-w">
+    <div class="bg-layer"></div>
     <div class="container">
       <div class="row">
         <section class="x-12 s-5 m-3 l-3 useful-links">
@@ -326,17 +329,17 @@
         <section class="x-12 s-7 m-6 l-6 contact-us">
           <h3>联系我们</h3>
           <ul>
-            <li><span class="op7">共青团四川大学委员会邮箱</span><em class="op9">scutw@163.com</em></li>
-            <li><span class="op7">新闻投稿邮箱</span><em class="op9">scutwnews@qq.com</em></li>
-            <li><span class="op7">办公室,对外联络,科技创新,就业创业事宜</span><em class="op9">85401222</em></li>
-            <li><span class="op7">组织部,学生会,青年志愿,社会实践事宜</span><em class="op9">85407980</em></li>
-            <li><span class="op7">宣传部,文化艺术,团委公选课事宜</span><em class="op9">85406812</em></li>
-            <li><span class="op7">学生社团事宜</span><em class="op9">85998669</em></li>
+            <li><span>共青团四川大学委员会邮箱</span><em>scutw@163.com</em></li>
+            <li><span>新闻投稿邮箱</span><em>scutwnews@qq.com</em></li>
+            <li><span>办公室,对外联络,科技创新,就业创业事宜</span><em>85401222</em></li>
+            <li><span>组织部,学生会,青年志愿,社会实践事宜</span><em>85407980</em></li>
+            <li><span>宣传部,文化艺术,团委公选课事宜</span><em>85406812</em></li>
+            <li><span>学生社团事宜</span><em>85998669</em></li>
           </ul>
         </section>
         <section class="x-12 s-12 m-3 l-3 qr-code">
           <h3>二维码</h3><img src="images/qr-code.png" class="img-qrcode">
-          <p class="qrcode-desc">川大共青团</p>
+          <p class="qrcode-desc op7">川大共青团</p>
         </section>
       </div>
     </div>
