fix z-index bug in safari

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
           </ul>
         </section>
         <section class="x-12 s-12 m-3 l-3 qr-code">
-          <h3>二维码</h3><img src="images/qr-code.png" class="img-qrcode">
+          <h3>二维码</h3><img src="images/qr-code.png" class="img-qrcode op7">
           <p class="qrcode-desc op7">川大共青团</p>
         </section>
       </div>
