--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
       <input type="submit" value="搜索" class="searchbar_btn">
     </form>
     <div class="header-text">
-      <p class="welcome">WELCOME TO</p>
+      <p class="welcome op8 f-rw fl">WELCOME TO</p>
       <h1 class="title">青春川大</h1>
-      <div class="desc mt1">
+      <div class="desc mt1 op8">
         <p><span>感受青春律动</span><span class="ml2">释放青春活力</span></p>
         <p>—— 触手可及的川大共青团</p>
       </div>
     </div>
     <nav class="nav clearfix c-w tc">
-      <ul id="navbar" class="navbar mauto">
+      <ul id="navbar" class="navbar mauto op8">
         <li><a href="#special" class="link-spec">专题</a></li>
         <li><a href="#news" class="link-news">新闻</a></li>
         <li><a href="#notice" class="link-nt">公告</a></li>
@@ -37,7 +37,7 @@
     </nav>
   </header>
   <section id="special" class="special clearfix">
-    <h2 class="title f8 c-grey-2 tc">专题<span class="c-grey-4 fl ml1 f-rw">SPECIAL</span></h2>
+    <h2 class="title f8 c-grey-2 tc">专题<span class="c-grey-4 fl ml1 f-rw fl">SPECIAL</span></h2>
     <p class="title-desc">点面结合 板块互联 扬帆新航</p>
     <div class="divider"></div>
     <div class="container">
@@ -328,7 +328,7 @@
         </section>
         <section class="x-12 s-7 m-6 l-6 contact-us">
           <h3>联系我们</h3>
-          <ul>
+          <ul class="op7">
             <li><span>共青团四川大学委员会邮箱</span><em>scutw@163.com</em></li>
             <li><span>新闻投稿邮箱</span><em>scutwnews@qq.com</em></li>
             <li><span>办公室,对外联络,科技创新,就业创业事宜</span><em>85401222</em></li>
