commit on mac os

--- a/components.html
+++ b/components.html
@@ -80,5 +80,49 @@
     <button class="arrow"></button>
     <button class="arrow right"></button>
   </section>
+  <section class="clearfix">
+    <ul class="news-list clearfix">
+      <li class="clearfix"><a class="link-img-hz">
+          <div class="link-img-hz_img-wrap"><img src="images/index-bg-1.jpg" class="link-img-hz_img"></div>
+          <div class="link-img-hz_text-wrap">
+            <h3 class="link-img-hz_title">四川大学120周年校庆志愿者总结表彰大会成功举行</h3>
+            <p class="link-img-hz_info">2016年11月3日</p>
+            <p class="link-img-hz_desc">11月3日，四川大学120周年校庆志愿者总结表彰大会在文华活动中心音乐厅成功举行。校党委副书记李向成、校长助理、学工部部长郭勇参加大会。大会由校团委书记徐海鑫主持。</p>
+          </div></a></li>
+      <li><a class="link-img-hz">
+          <div class="link-img-hz_img-wrap"><img src="images/index-bg-2.jpg" class="link-img-hz_img"></div>
+          <div class="link-img-hz_text-wrap">
+            <h3 class="link-img-hz_title">校团委成功举办“两学一做”专题学习会</h3>
+            <p class="link-img-hz_info">2016年11月2日</p>
+            <p class="link-img-hz_desc">11月2日，校团委在行政楼105举办“两学一做”专题学习会。校团委全体成员参加。</p>
+          </div></a></li>
+      <li><a class="link-img-hz">
+          <div class="link-img-hz_img-wrap"><img src="images/index-bg-3.jpg" class="link-img-hz_img"></div>
+          <div class="link-img-hz_text-wrap">
+            <h3 class="link-img-hz_title">挑战杯国赛终审决赛赛前培训会成功举办</h3>
+            <p class="link-img-hz_info">2015年11月2日</p>
+            <p class="link-img-hz_desc">11月4日，校科协成功举办挑战杯国赛终审决赛赛前培训会。我校进入国赛决赛的4支团队参与培训会。</p>
+          </div></a></li>
+      <li><a class="link-img-hz">
+          <div class="link-img-hz_img-wrap"><img src="images/index-bg-4.jpg" class="link-img-hz_img"></div>
+          <div class="link-img-hz_text-wrap">
+            <h3 class="link-img-hz_title">四川大学120周年校庆志愿者总结表彰大会成功举行</h3>
+            <p class="link-img-hz_info">2015年11月3日</p>
+            <p class="link-img-hz_desc">11月3日，四川大学120周年校庆志愿者总结表彰大会在文华活动中心音乐厅成功举行。校党委副书记李向成、校长助理、学工部部长郭勇参加大会。大会由校团委书记徐海鑫主持。</p>
+          </div></a></li>
+    </ul>
+  </section>
+  <section class="clearfix">
+    <ul class="navbar-vt">
+      <li><a>挑战杯</a></li>
+      <li><a>大创</a></li>
+      <li><a class="curr">社会实践</a></li>
+      <li><a>公益志愿</a></li>
+      <li><a>学术科技</a></li>
+    </ul>
+  </section>
+  <section class="clearfix">
+    <div class="navbar-page"><span class="navbar-page_prev"></span><span class="navbar-page_page">1</span><span class="navbar-page_page curr">2</span><span class="navbar-page_page">3</span><span class="navbar-page_dots">...</span><span class="navbar-page_page">4</span><span class="navbar-page_next"></span></div>
+  </section>
   <footer class="footer"></footer>
 </body>
