--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
       <input type="text" placeholder="keyword" class="searchbar_input">
       <input type="submit" value="搜索" class="searchbar_btn">
     </form>
-    <div class="header-text">
-      <p class="welcome">WELCOME TO</p>
-      <h1 class="title">青春川大</h1>
+    <div id="header-text" class="header-text">
+      <p class="welcome"><span>WELCOME</span><span>TO</span></p>
+      <h1 id="index-title" class="title"><span>青</span><span>春</span><span>川</span><span>大</span></h1>
       <div class="desc mt1">
-        <p><span>感受青春律动</span><span class="ml2">释放青春活力</span></p>
-        <p>—— 触手可及的川大共青团</p>
+        <p><span>感</span><span>受</span><span>青</span><span>春</span><span>律</span><span>动</span><span class="ml2">释</span><span>放</span><span>青</span><span>春</span><span>活</span><span>力</span></p>
+        <p><span>—— </span><span>触</span><span>手</span><span>可</span><span>及</span><span>的</span><span>川</span><span>大</span><span>共</span><span>青</span><span>团</span></p>
       </div>
     </div>
     <nav class="nav clearfix c-w tc">
