header文字特效 link-square扫光特效

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
       <input type="text" placeholder="keyword" class="searchbar_input">
       <input type="submit" value="搜索" class="searchbar_btn">
     </form>
-    <div class="header-text">
-      <p class="welcome op8 f-rw fl">WELCOME TO</p>
-      <h1 class="title">青春川大</h1>
+    <div id="header-text" class="header-text">
+      <p class="welcome op8 f-rw fl"><span>WELCOME</span><span class="ml2">TO</span></p>
+      <h1 class="title"><span>青</span><span>春</span><span>川</span><span>大</span></h1>
       <div class="desc mt1 op8">
-        <p><span>感受青春律动</span><span class="ml2">释放青春活力</span></p>
-        <p>—— 触手可及的川大共青团</p>
+        <p><span>感</span><span>受</span><span>青</span><span>春</span><span>律</span><span>动</span><span class="ml2">释</span><span>放</span><span>青</span><span>春</span><span>活</span><span>力</span></p>
+        <p><span>——</span><span>触</span><span>手</span><span>可</span><span>及</span><span>的</span><span>川</span><span>大</span><span>共</span><span>青</span><span>团</span></p>
       </div>
     </div>
     <nav class="nav clearfix c-w tc">
@@ -42,11 +42,16 @@
     <div class="divider"></div>
     <div class="container">
       <div class="row">
-        <div class="links tc clearfix"><a class="link-square lighter"><i class="fa fa-trophy fa-2x link-square_icon"></i>
-            <h4 class="link-square_desc">挑战杯</h4></a><a class="link-square light"><i class="fa fa-laptop fa-2x link-square_icon"></i>
-            <h4 class="link-square_desc">大创</h4></a><a class="link-square"><i class="fa fa-globe fa-2x link-square_icon"></i>
-            <h4 class="link-square_desc">社会实践</h4></a><a class="link-square dark"><i class="fa fa-heart fa-2x link-square_icon"></i>
-            <h4 class="link-square_desc">公益志愿</h4></a><a class="link-square darker"><i class="fa fa-search fa-2x link-square_icon"></i>
+        <div class="links tc clearfix"><a class="link-square lighter">
+            <div class="link-square_bg"></div><i class="fa fa-trophy fa-2x link-square_icon"></i>
+            <h4 class="link-square_desc">挑战杯</h4></a><a class="link-square light">
+            <div class="link-square_bg"></div><i class="fa fa-laptop fa-2x link-square_icon"></i>
+            <h4 class="link-square_desc">大创</h4></a><a class="link-square">
+            <div class="link-square_bg"></div><i class="fa fa-globe fa-2x link-square_icon"></i>
+            <h4 class="link-square_desc">社会实践</h4></a><a class="link-square dark">
+            <div class="link-square_bg"></div><i class="fa fa-heart fa-2x link-square_icon"></i>
+            <h4 class="link-square_desc">公益志愿</h4></a><a class="link-square darker">
+            <div class="link-square_bg"></div><i class="fa fa-search fa-2x link-square_icon"></i>
             <h4 class="link-square_desc">学术科技</h4></a></div>
       </div>
     </div>
