--- a/index.html
+++ b/index.html
@@ -10,26 +10,60 @@
   <script src="js/respond.min.js"></script><![endif]-->
 </head>
 <body>
-  <div class="header-bg"></div><a id="return-top" href="#header" class="return-top"></a>
+  <!--audio(src="audio/seve.mp3" autoplay)-->
+  <div class="music-control play"></div>
+  <div class="header-bg circle"></div><a id="return-top" href="#header" class="return-top"></a>
   <header id="header" class="header">
-    <div class="bg-layer"></div>
-    <form class="searchbar">
-      <input type="text" placeholder="keyword" class="searchbar_input">
-      <input type="submit" value="搜索" class="searchbar_btn">
-    </form>
-    <div id="header-text" class="header-text">
-      <p class="welcome op8 f-rw fl"><span>WELCOME</span><span class="ml2">TO</span></p>
-      <h1 class="title"><span>青</span><span>春</span><span>川</span><span>大</span></h1>
-      <div class="desc mt1 op8">
-        <p><span>感</span><span>受</span><span>青</span><span>春</span><span>律</span><span>动</span><span class="ml2">释</span><span>放</span><span>青</span><span>春</span><span>活</span><span>力</span></p>
-        <p><span>——</span><span>触</span><span>手</span><span>可</span><span>及</span><span>的</span><span>川</span><span>大</span><span>共</span><span>青</span><span>团</span></p>
+    <div class="searchbar-wrap">
+      <form class="searchbar">
+        <input type="text" placeholder="keyword" class="searchbar_input">
+        <input type="submit" value="搜索" class="searchbar_btn">
+      </form>
+    </div>
+    <p class="welcome f-rw fl"><span>WELCOME</span><span class="ml2">TO</span></p>
+    <h1 class="title"><span>青</span><span>春</span><span>川</span><span>大</span></h1>
+    <div class="desc-wrap mt1">
+      <div class="desc op8">
+        <p>感受青春律动释放青春活力
+          <!--span 感-->
+          <!--span 受-->
+          <!--span 青-->
+          <!--span 春-->
+          <!--span 律-->
+          <!--span 动-->
+          <!--span.ml2 释-->
+          <!--span 放-->
+          <!--span 青-->
+          <!--span 春-->
+          <!--span 活-->
+          <!--span 力-->
+        </p>
+        <p>—— 一触即发的川大共青团
+          <!--span ——-->
+          <!--span 触-->
+          <!--span 手-->
+          <!--span 可-->
+          <!--span 及-->
+          <!--span 的-->
+          <!--span 川-->
+          <!--span 大-->
+          <!--span 共-->
+          <!--span 青-->
+          <!--span 团-->
+        </p>
       </div>
     </div>
     <nav class="nav clearfix c-w tc">
       <ul id="navbar" class="navbar mauto op8">
-        <li><a href="#special" class="link-spec">专题</a></li>
-        <li><a href="#news" class="link-news">新闻</a></li>
-        <li><a href="#notice" class="link-nt">公告</a></li>
+        <li><a href="#special" class="link-spec">专题</a>
+          <div class="a-cover"></div>
+        </li>
+        <li><a href="#news" class="link-news">新闻</a>
+          <div class="a-cover"></div>
+        </li>
+        <li><a href="#notice" class="link-nt">公告</a>
+          <div class="a-cover"></div>
+        </li>
         <li><a href="#youth-league" class="link-yl">川大团委</a></li>
         <li><a href="#student-ground" class="link-sg">学生园地</a></li>
         <li><a href="#green-channel" class="link-gc">绿色通道</a></li>
@@ -155,7 +189,7 @@
         </div>
       </div>
     </div>
-    <div class="mt3 tc"><a class="btn mauto">更多公告</a></div>
+    <div class="mt3 tc"><a class="btn mauto">更多</a></div>
   </section>
   <section id="youth-league" class="youth-league pt5 clearfix">
     <h2 class="title f8 tc">川大团委<span class="op5 fl ml1 f-rw">ABOUT US</span></h2>
@@ -163,124 +197,144 @@
     <button id="yl-left" class="arrow left"></button>
     <button id="yl-right" class="arrow right"></button>
     <div id="intro-list" style="left:0;" class="intro-list">
-      <div class="intro-wrap blue">
-        <div class="container">
-          <div class="row">
-            <section class="l-8 m-10 s-12 x-12 l-offset-2 m-offset-1 s-offset-0 x-offset-0">
-              <h3 class="f5 tc group-name">团委秘书处</h3>
-              <p class="tc group-intro">团委秘书处是校团委重要职能部门，负责校团委日常工作的开展，主要负责校团委办公室事务、</p>
-              <p class="tc group-intro">相关会议组织和财务工作等，是校团委的“大管家”。下设综合事务中心、信息管理中心、</p>
-              <p class="tc group-intro">交流活动中心和青年服务与发展中心。</p>
-            </section>
+      <div style="background-image:url('images/index-bg-10.jpg')" class="intro-wrap">
+        <div class="intro-content">
+          <div class="container">
+            <div class="row">
+              <section class="l-8 m-10 s-12 x-12 l-offset-2 m-offset-1 s-offset-0 x-offset-0">
+                <h3 class="f5 tc group-name">团委秘书处</h3>
+                <p class="tc group-intro">团委秘书处是校团委重要职能部门，负责校团委日常工作的开展，主要负责校团委办公室事务、</p>
+                <p class="tc group-intro">相关会议组织和财务工作等，是校团委的“大管家”。下设综合事务中心、信息管理中心、</p>
+                <p class="tc group-intro">交流活动中心和青年服务与发展中心。</p>
+              </section>
+            </div>
           </div>
         </div>
       </div>
-      <div class="intro-wrap green">
-        <div class="container">
-          <div class="row">
-            <section class="l-8 m-10 s-12 x-12 l-offset-2 m-offset-1 s-offset-0 x-offset-0">
-              <h3 class="f5 tc group-name">学生会</h3>
-              <p class="tc group-intro">四川大学学生会是川大本科学生自治组织，是成都市学生联合会主席单位。四川大学学生会致力于通过</p>
-              <p class="tc group-intro">各类型活动，全面服务川大同学，助力同学成长进步。下设办公室、宣传部、学术科技部、</p>
-              <p class="tc group-intro">文体部、外联部、学习部、权益部、素质拓展中心、公关礼仪部和女生部等</p>
-              <p class="tc group-intro">二级部门，同时分管四川大学学生电视台等的工作。</p>
-            </section>
+      <div style="background-image:url('images/index-bg-11.jpg')" class="intro-wrap">
+        <div class="intro-content">
+          <div class="container">
+            <div class="row">
+              <section class="l-8 m-10 s-12 x-12 l-offset-2 m-offset-1 s-offset-0 x-offset-0">
+                <h3 class="f5 tc group-name">学生会</h3>
+                <p class="tc group-intro">四川大学学生会是川大本科学生自治组织，是成都市学生联合会主席单位。四川大学学生会致力于通过</p>
+                <p class="tc group-intro">各类型活动，全面服务川大同学，助力同学成长进步。下设办公室、宣传部、学术科技部、</p>
+                <p class="tc group-intro">文体部、外联部、学习部、权益部、素质拓展中心、公关礼仪部和女生部等</p>
+                <p class="tc group-intro">二级部门，同时分管四川大学学生电视台等的工作。</p>
+              </section>
+            </div>
           </div>
         </div>
       </div>
-      <div class="intro-wrap red">
-        <div class="container">
-          <div class="row">
-            <section class="l-8 m-10 s-12 x-12 l-offset-2 m-offset-1 s-offset-0 x-offset-0">
-              <h3 class="f5 tc group-name">团委组织部</h3>
-              <p class="tc group-intro">团委组织部是校团委重要职能部门，负责全校基层团建和团干培养工作。下设综合中心、</p>
-              <p class="tc group-intro">骨干培养中心、组织建设中心、基层工作中心、宣传中心</p>
-              <p class="tc group-intro">和“青马工程”专项办公室六大部门。</p>
-            </section>
+      <div style="background-image:url('images/index-bg-12.jpg')" class="intro-wrap">
+        <div class="intro-content">
+          <div class="container">
+            <div class="row">
+              <section class="l-8 m-10 s-12 x-12 l-offset-2 m-offset-1 s-offset-0 x-offset-0">
+                <h3 class="f5 tc group-name">团委组织部</h3>
+                <p class="tc group-intro">团委组织部是校团委重要职能部门，负责全校基层团建和团干培养工作。下设综合中心、</p>
+                <p class="tc group-intro">骨干培养中心、组织建设中心、基层工作中心、宣传中心</p>
+                <p class="tc group-intro">和“青马工程”专项办公室六大部门。</p>
+              </section>
+            </div>
           </div>
         </div>
       </div>
-      <div class="intro-wrap blue">
-        <div class="container">
-          <div class="row">
-            <section class="l-8 m-10 s-12 x-12 l-offset-2 m-offset-1 s-offset-0 x-offset-0">
-              <h3 class="f5 tc group-name">团委宣传部</h3>
-              <p class="tc group-intro">团委宣传部是校团委重要职能部门，肩负着引领学生思潮，助力学生成长的重任，负责全校团学系统</p>
-              <p class="tc group-intro">的宣传和全校青年的舆论引导工作。下设办公室、新媒体中心、网络部、创意设计部、企划部、</p>
-              <p class="tc group-intro">《川大人》报社、《川大共青团》杂志社和校园广播站等二级部门。</p>
-            </section>
+      <div style="background-image:url('images/index-bg-10.jpg')" class="intro-wrap">
+        <div class="intro-content">
+          <div class="container">
+            <div class="row">
+              <section class="l-8 m-10 s-12 x-12 l-offset-2 m-offset-1 s-offset-0 x-offset-0">
+                <h3 class="f5 tc group-name">团委宣传部</h3>
+                <p class="tc group-intro">团委宣传部是校团委重要职能部门，肩负着引领学生思潮，助力学生成长的重任，负责全校团学系统</p>
+                <p class="tc group-intro">的宣传和全校青年的舆论引导工作。下设办公室、新媒体中心、网络部、创意设计部、企划部、</p>
+                <p class="tc group-intro">《川大人》报社、《川大共青团》杂志社和校园广播站等二级部门。</p>
+              </section>
+            </div>
           </div>
         </div>
       </div>
-      <div class="intro-wrap green">
-        <div class="container">
-          <div class="row">
-            <section class="l-8 m-10 s-12 x-12 l-offset-2 m-offset-1 s-offset-0 x-offset-0">
-              <h3 class="f5 tc group-name">团委文化艺术部</h3>
-              <p class="tc group-intro">团委文化艺术部是校团委重要职能部门，负责组织开展校园内大型学生文化艺术活动，</p>
-              <p class="tc group-intro">如凤舞川大、凤鸣川大等在全校内影响力大、知名度高的品牌活动，</p>
-              <p class="tc group-intro">是校园文化艺术活动主阵地。</p>
-            </section>
+      <div style="background-image:url('images/index-bg-11.jpg')" class="intro-wrap">
+        <div class="intro-content">
+          <div class="container">
+            <div class="row">
+              <section class="l-8 m-10 s-12 x-12 l-offset-2 m-offset-1 s-offset-0 x-offset-0">
+                <h3 class="f5 tc group-name">团委文化艺术部</h3>
+                <p class="tc group-intro">团委文化艺术部是校团委重要职能部门，负责组织开展校园内大型学生文化艺术活动，</p>
+                <p class="tc group-intro">如凤舞川大、凤鸣川大等在全校内影响力大、知名度高的品牌活动，</p>
+                <p class="tc group-intro">是校园文化艺术活动主阵地。</p>
+              </section>
+            </div>
           </div>
         </div>
       </div>
-      <div class="intro-wrap red">
-        <div class="container">
-          <div class="row">
-            <section class="l-8 m-10 s-12 x-12 l-offset-2 m-offset-1 s-offset-0 x-offset-0">
-              <h3 class="f5 tc group-name">团委创业就业促进部</h3>
-              <p class="tc group-intro">团委创业就业促进部是校团委重要职能部门，旨在提升学生创新创业能力和促进学生就业。</p>
-            </section>
+      <div style="background-image:url('images/index-bg-12.jpg')" class="intro-wrap">
+        <div class="intro-content">
+          <div class="container">
+            <div class="row">
+              <section class="l-8 m-10 s-12 x-12 l-offset-2 m-offset-1 s-offset-0 x-offset-0">
+                <h3 class="f5 tc group-name">团委创业就业促进部</h3>
+                <p class="tc group-intro">团委创业就业促进部是校团委重要职能部门，旨在提升学生创新创业能力和促进学生就业。</p>
+              </section>
+            </div>
           </div>
         </div>
       </div>
-      <div class="intro-wrap blue">
-        <div class="container">
-          <div class="row">
-            <section class="l-8 m-10 s-12 x-12 l-offset-2 m-offset-1 s-offset-0 x-offset-0">
-              <h3 class="f5 tc group-name">科协</h3>
-              <p class="tc group-intro">四川大学学生学术科技协会是川大全校性质的学生学术科技联合组织，负责组织开展校内大型学术</p>
-              <p class="tc group-intro">科技竞赛和配合组织省级、国家级和国际级大赛在四川大学的开展工作。</p>
-            </section>
+      <div style="background-image:url('images/index-bg-10.jpg')" class="intro-wrap">
+        <div class="intro-content">
+          <div class="container">
+            <div class="row">
+              <section class="l-8 m-10 s-12 x-12 l-offset-2 m-offset-1 s-offset-0 x-offset-0">
+                <h3 class="f5 tc group-name">科协</h3>
+                <p class="tc group-intro">四川大学学生学术科技协会是川大全校性质的学生学术科技联合组织，负责组织开展校内大型学术</p>
+                <p class="tc group-intro">科技竞赛和配合组织省级、国家级和国际级大赛在四川大学的开展工作。</p>
+              </section>
+            </div>
           </div>
         </div>
       </div>
-      <div class="intro-wrap green">
-        <div class="container">
-          <div class="row">
-            <section class="l-8 m-10 s-12 x-12 l-offset-2 m-offset-1 s-offset-0 x-offset-0">
-              <h3 class="f5 tc group-name">青志</h3>
-              <p class="tc group-intro">四川大学青年志愿者协会前为四川大学青年志愿者总队，始创于上世纪90年代，秉承志愿服务精神，</p>
-              <p class="tc group-intro">开展各类型、各层次青年志愿服务，展现川大学子的社会责任感和奉献心。</p>
-            </section>
+      <div style="background-image:url('images/index-bg-11.jpg')" class="intro-wrap">
+        <div class="intro-content">
+          <div class="container">
+            <div class="row">
+              <section class="l-8 m-10 s-12 x-12 l-offset-2 m-offset-1 s-offset-0 x-offset-0">
+                <h3 class="f5 tc group-name">青志</h3>
+                <p class="tc group-intro">四川大学青年志愿者协会前为四川大学青年志愿者总队，始创于上世纪90年代，秉承志愿服务精神，</p>
+                <p class="tc group-intro">开展各类型、各层次青年志愿服务，展现川大学子的社会责任感和奉献心。</p>
+              </section>
+            </div>
           </div>
         </div>
       </div>
-      <div class="intro-wrap red">
-        <div class="container">
-          <div class="row">
-            <section class="l-8 m-10 s-12 x-12 l-offset-2 m-offset-1 s-offset-0 x-offset-0">
-              <h3 class="f5 tc group-name">社团联</h3>
-              <p class="tc group-intro">四川大学学生社团联合会，简称校社团联，是全校600余学生社团的综合管理和服务组织，负责对</p>
-              <p class="tc group-intro">包括学术性、文体型、实践型等在内的八大类学生社团进行监督、考核和服务。</p>
-            </section>
+      <div style="background-image:url('images/index-bg-12.jpg')" class="intro-wrap">
+        <div class="intro-content">
+          <div class="container">
+            <div class="row">
+              <section class="l-8 m-10 s-12 x-12 l-offset-2 m-offset-1 s-offset-0 x-offset-0">
+                <h3 class="f5 tc group-name">社团联</h3>
+                <p class="tc group-intro">四川大学学生社团联合会，简称校社团联，是全校600余学生社团的综合管理和服务组织，负责对</p>
+                <p class="tc group-intro">包括学术性、文体型、实践型等在内的八大类学生社团进行监督、考核和服务。</p>
+              </section>
+            </div>
           </div>
         </div>
       </div>
-      <div class="intro-wrap blue">
-        <div class="container">
-          <div class="row">
-            <section class="l-8 m-10 s-12 x-12 l-offset-2 m-offset-1 s-offset-0 x-offset-0">
-              <h3 class="f5 tc group-name">川大青年研究中心</h3>
-              <p class="tc group-intro">川大共青团青年研究中心是全校性的青年研究中心，引导学生思潮，探究学生思想。</p>
-            </section>
+      <div style="background-image:url('images/index-bg-10.jpg')" class="intro-wrap">
+        <div class="intro-content">
+          <div class="container">
+            <div class="row">
+              <section class="l-8 m-10 s-12 x-12 l-offset-2 m-offset-1 s-offset-0 x-offset-0">
+                <h3 class="f5 tc group-name">川大青年研究中心</h3>
+                <p class="tc group-intro">川大共青团青年研究中心是全校性的青年研究中心，引导学生思潮，探究学生思想。</p>
+              </section>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </section>
   <section id="student-ground" class="student-ground">
-    <h2 class="title f8 c-grey-2 tc">学生园地<span class="c-grey-4 fl ml1 f-rw">STUDENT</span></h2>
+    <h2 class="title f8 c-grey-2 tc">活动预告<span class="c-grey-4 fl ml1 f-rw">ACTIVITY</span></h2>
     <p class="title-desc">感知最在地青春川大</p>
     <div class="divider"></div>
     <div class="container">
@@ -349,6 +403,7 @@
       </div>
     </div>
   </footer>
+  <script type="text/javascript" src="js/jquery-3.1.1.js"></script>
   <script type="text/javascript" src="js/melon.js"></script>
   <script type="text/javascript" src="js/index.js"></script>
 </body>
